# Changelog
Alle wesentlichen Änderungen für dieses Projekt werden hier dokumentiert.

Das Format basiert auf link:https://keepachangelog.com/en/1.0.0[Keep a Changelog].

## [UNRELEASED] -- XXXX-XX-XX
* Einige native Queries zu JPA Queries ändern, damit Azure sie auflösen kann. 
* JPA Data Entities Column Textgrößen und Datenfeldtypen korrigieren.

## [12.65.10] -- 2023-08-03
* UserContext anhand des JDBC Dialects herausfinden, damit der richige Benutzer nach Ausführen einer Prozedur ermittelt werden kann.
* Azure Dependency hinzufügen zum besseren Umgehen mit JPA.

## [12.65.9] -- 2023-08-01
* Bekannter Fehler "Ungültiger Objektname "xtcasServiceMessageReceiverLoginType" fixen. Man kann das CAS nun auf einer leeren/alten Datenbank starten und dann ein Setup ausführen, auch wenn die Tabelle nicht existiert.
* aero.minova.service.event.dispatcher Abhängigkeit von setup nach service verschieben, da diese für Extensions benötigt wird und nicht für das Setup beim CAS.

## [12.65.8] -- 2023-07-25
* jackson-databind-nullable Abhängigkeit für aero.minova.github-Extension einbinden

## [12.65.7] -- 2023-07-24
* Automatisch generierte Doku für Tabellen aktualisieren.
* Workaround fürs Löschen von Benutzern, da sonst das CAS einfriert und man es neu starten muss.
* Anpassen der Feldergrößen in der Users-Maske.

## [12.65.6] -- 2023-07-21
* DBUser um Description erweitert.
* Erweiterungen für ganze Transaktionen ermöglichen

## [12.65.5] -- 2023-07-11
* ServiceMessageReceiverLoginType Initialisierung über Java Code statt data.sql File durchführen. Damit funktioniert die Initialisierung, egal welche Datenbank verwendet wird

## [12.65.4] -- 2023-07-10
* xpcasInsertAllPrivilegesToUserGroup an neue Tabellenstrukturen anpassen, um Setup-Fehler zu beheben.

## [12.65.3] -- 2023-07-07
* Login erweitern über Value aero.minova.cas.setup.logging.  

## [12.65.2] -- 2023-07-07
* Setup-XMLs vom CAS-App-Projekt vervollständigen, um das Setup von Tabellen zu korrigieren.