@@ -4,6 +4,9 @@ Alle wesentlichen Änderungen für dieses Projekt werden hier dokumentiert.
 Das Format basiert auf link:https://keepachangelog.com/en/1.0.0[Keep a Changelog].
 
 ## [UNRELEASED] -- XXXX-XX-XX
+* service.event.dispatcher Abhängigkeit entfernen, da dieser selbst vom CAS abhängig ist und Probleme verursacht
+
+
 * Einige native Queries zu JPA Queries ändern, damit Azure sie auflösen kann. 
 * JPA Data Entities Column Textgrößen und Datenfeldtypen korrigieren.
 
